--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "popper.js": "^1.16.1"
     },
     "dependencies": {
+        "bluebird": "^3.7.2",
         "bootstrap": "^4.4.1",
         "jquery": "^1.9.1",
         "laravel-echo": "^1.9.0",
